--- a/css/style.css
+++ b/css/style.css
@@ -150,15 +150,11 @@ img {
 }
 
 .contact-mail {
-	width: 16px;
-	height: 12px;
 	margin-right: 10px;
 	fill: currentColor;
 }
 
 .contact-tel {
-	width: 10px;
-	height: 16px;
 	margin-right: 10px;
 	fill: currentColor;
 }
@@ -267,10 +263,6 @@ text-align: center;
 	border-radius: 4px;
 }
 
-.size {
-	width: 70px;
-	height: 70px;
-}
 
 .project-title {
 margin-bottom: 10px;
@@ -320,6 +312,10 @@ margin-bottom: 10px;
 	margin-bottom: 30px;
 }
 
+.media-list:not(:last-child) {
+	margin-right: 10px;
+}
+
 .media-link {
 	display: flex;
 	justify-content: center;
@@ -335,11 +331,8 @@ margin-bottom: 10px;
 .media-link:not(:last-child) {
 	margin-right: 10px;
 }
-.size-media {
-	width: 20px;
-	height: 20px;
-	
 
+.size-media {
 	fill: currentColor;
 }
 
@@ -404,13 +397,10 @@ margin-bottom: 10px;
 .wrap-link:hover,
 .wrap-link:focus {
 	color: var(--focus-color);
-	border: 1px solid var(--focus-color);
+	border: solid var(--focus-color);
 }
 
 .icon-client {
-	width: 106px;
-	height: 60px;
-
 	fill: currentColor;
 }
 
@@ -483,7 +473,6 @@ footer {
 
 .footer-icon {
 	background-color: rgba(255, 255, 255, 0.1);
-	color: var(--white-text-color);
 }
 
 .info-address {
@@ -543,10 +532,12 @@ footer {
 	width: 370px;
 }
 
-.portfolio-link:hover,
-.portfolio-link:focus {
-	background: #FFFFFF;
-	border: 1px solid #EEEEEE;
+.box-link {
+	display: inline-block;
+}
+
+.box-link:hover,
+.box-link:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 	0px 4px 4px rgba(0, 0, 0, 0.06),
 	1px 4px 6px rgba(0, 0, 0, 0.16);
