--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ img {
 		to right,
 		rgba(47, 48, 58, 0.4),
 		rgba(47, 48, 58, 0.4)
-	), url('../image/hiro-Img.jpg');
+	), url('../image/Img-hero.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -309,7 +309,7 @@ margin-bottom: 10px;
 .team-media {
 	display: flex;
 	justify-content: center;
-	margin-bottom: 30px;
+	padding-bottom: 30px;
 }
 
 .media-list:not(:last-child) {
@@ -472,6 +472,7 @@ footer {
 }
 
 .footer-icon {
+	color: var(--white-text-color);
 	background-color: rgba(255, 255, 255, 0.1);
 }
 
