--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ img {
 		to right,
 		rgba(47, 48, 58, 0.4),
 		rgba(47, 48, 58, 0.4)
-	), url('../image/Img-hero.jpg');
+	), url('../image/hero-img.jpg');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
